feat: Phase 7-8 - Persistence adapters and hexagonal configuration
- Created 7 JPA entity classes (EnderecoEmbeddable + 6 main entities)
- Created 6 Spring Data JPA repository interfaces
- Created 6 repository adapter implementations with full CRUD + custom operations
- Created 6 persistence mappers for entity translation
- Updated all UseCase Input classes to support record-style getters
- Fixed Java 8 API compatibility issues (isBlank, toList, ifPresentOrElse)
- Added custom getter methods to all output DTOs
- Fixed input mappers to use factory methods for entity creation
- Updated Application.java with new JPA repository base packages
- Created AdapterConfiguration with 20 UseCase bean definitions
- Created PersistenceAdapterConfiguration for repository port implementations
- Created HttpAdapterConfiguration as placeholder for HTTP beans

Compilation verified: SUCCESS